--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,12 +1,14 @@
 <mvc:View controllerName="ui5.challenge.controller.Main" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
     <VBox>
+        <Title text="{i18n>mainTitleText}" />
         <List items="{
                 path: 'viewModel>/items'
             }">
             <headerToolbar>
                 <OverflowToolbar>
                     <ToolbarSpacer />
-                    <Button id="mainButton" text="Main Button" />
+                    <Button id="mainButton" text="{i18n>mainButton}" />
+                    <Button id="myControl" text="{i18n>goToDetail}" press="onGoToDetail" />
                 </OverflowToolbar>
             </headerToolbar>
             <items>
